# tap-podbean

./: README.md  meltano.yml  pyproject.toml  tox.ini
.github/workflows/: ci_workflow.yml
tap_podbean/: auth.py  client.py  pagination.py  paginator.py  streams.py  tap.py
tap_podbean/schemas/: analytics_reports.json  csv_reports.json  episodes.json  podcast_download_reports.json  podcast_engagement_reports.json  podcasts.json  private_members.json  report_download.json
tap_podbean/tests/: __init__.py  mock_api.py  test_core.py
tap_podbean/tests/mock_responses/: analytic_reports.json  auth_default.json  auth_multi.json  episodes.json  podcast_download_reports.json  podcast_engagement_reports.json  podcasts.json  private_members.json  report.csv
tools/: insomnia_collection.json
